--- a/index.html
+++ b/index.html
@@ -5,29 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="ex4.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>
-        <div class="purpleBox">
-            <div class="dogWalking">
-                <div class= ></div>
-            Grant's Dog Walking!
+    <header>
+        <nav class="navClass">
+            <p>Grants Dog Walking!</p>
+            <div class="navigationLinks">
+                <a href="/contact" id="contact">Home</a>
+                <a href="/prices" id="contact">Prices</a>
+                <a href="/home" id="contact">Contact Us</a>
             </div>
-            <div class="wrapper2">
-                <div class="homeBtn">
-                    Home
-                    </div>
-                    <div class="pricesBtn">
-                    Prices
-                    </div>
-        
-                    <div class="contactUs">
-                    Contact Us
-                </div>
-            </div>
-        </div>
-    </h1>
+        </nav>
+    </header>
     
 </body>
 </html>
