--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav class="navClass">
-            <p>Grants Dog Walking!</p>
+            <p class="p">Grants Dog Walking!</p>
             <div class="navigationLinks">
                 <a href="/contact" id="contact">Home</a>
                 <a href="/prices" id="contact">Prices</a>
